[gd_scene load_steps=20 format=2]

[ext_resource path="res://drackolyte sprite.png" type="Texture" id=1]
[ext_resource path="res://Drackolyte.gd" type="Script" id=2]
[ext_resource path="res://EnemyBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://silent drackolyte sprite.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 21.1997
height = 16.6932

[sub_resource type="CapsuleShape2D" id=15]
radius = 47.3229
height = 46.9862

[node name="Drackolyte" type="RigidBody2D" groups=[
"mobs",
]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
EnemyBullet = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.486925, 0.506434 )
frames = SubResource( 13 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.793701, -8.73071 )
rotation = -0.6353
shape = SubResource( 14 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 97, 0 )

[node name="CanFireAgainTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="EnemyMuzzle" type="Position2D" parent="."]
position = Vector2( -64.2898, 0.793701 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.561882, -4.62261 )
scale = Vector2( 0.443178, 0.422934 )
collision_layer = 2
collision_mask = 5

[node name="hurtbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.25992, -8.50447 )
rotation = -0.663399
shape = SubResource( 15 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="CanFireAgainTimer" to="." method="_on_CanFireAgainTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
